plugins {
    id 'java'
    id 'application'
}

group 'com.github.shk0da'
version '1.0'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation 'ru.tinkoff.piapi:java-sdk-core:1.5'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'com.tictactec:ta-lib:0.4.0'
    implementation 'org.jfree:jfreechart:1.0.19'
}

task uberJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'com.github.shk0da.GoldenDragon.GoldenDragon'
    }

    from { sourceSets.main.output }
    dependsOn { configurations.runtimeClasspath }
    from {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        configurations.runtimeClasspath.filter { it.name.endsWith("jar") }.collect { zipTree(it) }
    }
}

task TestLevelTrader(type:JavaExec) {
    main = "TestLevelTrader"
    classpath = sourceSets.test.runtimeClasspath
}